Bug 132745 - Can not save image to fish:// protocol
Summary: Can not save image to fish:// protocol
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: DImg-FileIO (other bugs)
Version First Reported In: 0.9.1
Platform: Slackware Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-08-21 14:52 UTC by Klaus Weidenbach
Modified: 2022-02-04 06:20 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Klaus Weidenbach 2006-08-21 14:52:06 UTC
Version:           0.9beta1 (using KDE KDE 3.5.4)
Installed from:    Slackware Packages
OS:                Linux

It is not possible to use "Save As" from the digiKam image editor to save a picture trough the fish-protocol.
I saw this bug http://bugs.kde.org/show_bug.cgi?id=104005 that was related to import from smb and fish, but I cannot write to fish. I haven't tested smb. On the remote machine I have the same username and I can browse trough the remote machine e.g my home folder and when I save it it get's written to my local home folder. The funny thing is that I browse to my remote machine and there I see not the file, but when I save it I get warning that I overwrite an existing file, the one on my local machine.
Comment 1 Klaus Weidenbach 2007-02-18 19:47:24 UTC
Just a short reminder. This bug still exists in the current SVN version towards digikam 0.9.1. "Save As" to fish:// from other KDE apps works fine.
Comment 2 Andi Clemens 2008-08-15 22:15:43 UTC
I can can confirm this, too...
Comment 3 caulier.gilles 2008-08-19 11:12:43 UTC
Supporting remote file systems in showfoto/image editor is another important stuff to do.

Gilles
Comment 4 Mikolaj Machowski 2008-12-10 15:34:50 UTC
Looks like it is duplicate of Bug 154183 - that one is more about reading from fish:// but I think implementation would be immediately two-way, wouldn't it?

Can I mark 154183 as duplicate?
Comment 5 caulier.gilles 2008-12-10 15:37:44 UTC
Mik,

No... It's not the same implementation (Editor vs CameraGUI)

Gilles
Comment 6 Andi Clemens 2009-10-08 00:30:37 UTC
Could this be solved by KioImportExport now?
Or do we still plan to do this internally in digiKam?
Comment 7 Johannes Wienke 2009-10-08 01:09:33 UTC
At least it can be use for that purpose. But accepting fish directly in the save dialog looks more convenient.

What's the reason why this is not working directly?
Comment 8 caulier.gilles 2009-10-08 08:22:03 UTC
Johannes,

The reason is simple : digiKam image editor always considerate that image is in local file system. There is no mechanism to handle remote file. I think this is true for digiKam image editor and must still as well... but, it just my viewpoint of course...

This is not true for showfoto, which can already load remote file (trough KIO slave):

http://lxr.kde.org/source/extragear/graphics/digikam/showfoto/showfoto.cpp#657

...but not yet save to remote folder, because... code is simply missing (:=)))

Gilles

Technically, there is no problem to implement KIO slave support in save method from showfoto.
Comment 9 caulier.gilles 2009-10-08 08:23:56 UTC
related file : https://bugs.kde.org/show_bug.cgi?id=132079
Comment 10 Johannes Wienke 2009-10-08 10:20:19 UTC
Sounds like I could have a look at this. ;) But not before this weekend
Comment 11 Marcel Wiesweg 2009-10-08 20:06:14 UTC
All image loaders (libjpeg, libpng, libtiff...) need a local file. What needs to be done to support remote URLs is downloading to a temp file before opening (showfoto only) and uploading after saving to a temp file is done (showfoto + imagewindow). KIO provides all that is needed.
Comment 12 Johannes Wienke 2009-10-14 15:53:16 UTC
SVN commit 1035192 by jwienke:

Saving to remote locations is now possible via KIO

BUG: 132745

 M  +136 -116  editorwindow.cpp  
 M  +13 -1     editorwindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1035192