Saving to remote locations is now possible via KIO

BUG: 132745

svn path=/trunk/extragear/graphics/digikam/; revision=1035192